# scromble

./: .gitignore  Cargo.toml  DESIGN.md  README.md  flake.nix  rustfmt.toml  shell.nix
src/: core.rs  f512_569.rs  hmac_table.rs  main.rs  new_main.rs  old_decrypt.rs  secret_sharing.rs  util.rs
