[package]
name = "scromble"
version = "1.0.0"
authors = ["Joe Doyle <joethedoyle@protonmail.com>"]
edition = "2018"

# [build]
# rustflags = ["-Ctarget-cpu=haswell","-Ctarget-feature=+sse2"]

[profile.release]
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
rust-argon2 = { version = "0.8.2" }
blake2b_simd = { version = "^0.5" }
chacha20 = { version = "0.7.0", features = [ "xchacha","zeroize" ] }
zeroize = { version = "1.1.1", features = [ "zeroize_derive" ] }
rpassword = "5.0"
rand = "0.7.3"
generic-array = "0.14.4"
cipher = { version = "0.3.0", features = [ "std" ] }
subtle = "2.4.1"

[dev-dependencies]
num = ""
quickcheck = ""
quickcheck_macros = ""
lazy_static = ""

