[package]
name = "scromble"
description = "A no-nonsense single-file encryptor with data authentication"
version = "2.1.3"
authors = ["Joe Doyle <joethedoyle@protonmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"

[profile.release]
lto = "fat"

[profile.dev]
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
clap_complete = { version = "3.0.0" }
argon2 = { version = "0.4.1" }
# blake2 = { version = "0.10.6" }
blake2b_simd = { version = "1.0.3" }
secrecy = { version = "0.10.3" }
typenum = { version = "1.14" }
zeroize = { version = "1.1.1", features = [ "zeroize_derive" ] }
rpassword = "5.0"
quickcheck = "1.0.3"
rand = "0.8.5"
conv = "0.3.3"
generic-array = "0.14.4"
rand_chacha = { version = "0.3.1" }
subtle = { version = "2.4.1" }
digest = { version = "0.10.6" }

[dev-dependencies]
quickcheck_macros = "1.0.0"

